logs/watchdog_20251012_1745.log
[12/10/2025 17:45:01,68] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 17:45:01,93] END WATCHDOG 
